# ORILINX

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  README.md  orilinx.def  pyproject.toml
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  installation.rst  outputFormats.rst  quickStart.rst  releaseNotes.rst  troubleshooting.rst  visualisation.rst  workflow.rst
models/: .gitmodules
orilinx/: cli.py  data.py  data_loader_any.py  data_loader_gc.py  io.py  model_architecture.py  model_architecture_optim.py  predict.py  utils.py
tests/: test_cli_help.py
